Added exceptions in docs
